<resources>
    <string name="app_name">Hangman</string>
    <string name="hiddenWord">●</string>
    <string name="howToPlay">Save the man from hanging. You must guess the hidden word by clicking on the correct letter. A correct letter gives you 50 points but if you choose a wrong letter you will lose a life and 5 points. You can continue as long as you guess the correct word, but if you lose your highscore will be stored when clicking on the button.</string>
    <string name="wonMessage">Congratulation you guessed the correct word</string>
    <string name="continue_msg">Continue</string>
    <string name="howToPlayHeader">How to play</string>
    <string name="play_2">Play</string>
    <string name="life">Life</string>
    <string name="score">your score is: </string>
    <string name="guessed">Amount of guesses: </string>
    <string name="lostMsg">Oh, you lost!</string>
    <string name="theWord">The word was:</string>
    <string name="theCorrectWord">.</string>
    <string name="highscore">Highscore</string>
    <string name="checkHighscore">Check if you have beaten the highscore.</string>
    <string name="name">Name</string>


    //letters
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
</resources>
